--- a/AdaptiveWeather/Base.lproj/Main.storyboard
+++ b/AdaptiveWeather/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AdaptiveWeather" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,93 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud" translatesAutoresizingMaskIntoConstraints="NO" id="KXc-cX-gpj">
+                                <rect key="frame" x="150" y="20" width="300" height="197"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mce-rD-unJ" userLabel="TextContainer">
+                                <rect key="frame" x="0.0" y="237" width="600" height="363"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Cupertino" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="tc2-eD-UUR">
+                                        <rect key="frame" x="-6.5" y="10" width="613" height="177"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="150"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="widthClass=compact">
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="90"/>
+                                        </variation>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="28C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Wi0-5b-BDL">
+                                        <rect key="frame" x="73" y="58" width="454" height="295"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="250"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="widthClass=compact">
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="150"/>
+                                        </variation>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.21568627450980393" green="0.50196078431372548" blue="0.72941176470588232" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Wi0-5b-BDL" secondAttribute="bottom" constant="10" id="41R-It-L0N"/>
+                                    <constraint firstAttribute="centerX" secondItem="Wi0-5b-BDL" secondAttribute="centerX" id="Exi-65-XMn"/>
+                                    <constraint firstItem="tc2-eD-UUR" firstAttribute="top" secondItem="mce-rD-unJ" secondAttribute="top" constant="10" id="H0c-23-ZEh"/>
+                                    <constraint firstItem="tc2-eD-UUR" firstAttribute="width" secondItem="mce-rD-unJ" secondAttribute="width" id="isK-it-j3c"/>
+                                    <constraint firstAttribute="centerX" secondItem="tc2-eD-UUR" secondAttribute="centerX" id="oed-vA-vTJ"/>
+                                    <constraint firstItem="Wi0-5b-BDL" firstAttribute="width" secondItem="mce-rD-unJ" secondAttribute="width" id="yKS-fb-WrD"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.29019607843137252" green="0.6705882352941176" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="mce-rD-unJ" firstAttribute="top" secondItem="KXc-cX-gpj" secondAttribute="bottom" constant="20" id="2se-9m-eNp"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mce-rD-unJ" secondAttribute="bottom" id="6AF-PF-mP0"/>
+                            <constraint firstItem="mce-rD-unJ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="A3q-Zp-kxA"/>
+                            <constraint firstAttribute="trailing" secondItem="mce-rD-unJ" secondAttribute="trailing" id="EjZ-7L-sN7"/>
+                            <constraint firstItem="mce-rD-unJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GGH-y1-lbd"/>
+                            <constraint firstItem="KXc-cX-gpj" firstAttribute="height" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="O7t-CF-bey"/>
+                            <constraint firstAttribute="centerY" secondItem="KXc-cX-gpj" secondAttribute="centerY" id="P6T-Y3-fIQ"/>
+                            <constraint firstItem="KXc-cX-gpj" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.45" id="Qqo-gw-U2M"/>
+                            <constraint firstAttribute="centerX" secondItem="KXc-cX-gpj" secondAttribute="centerX" id="RNE-cj-GAg"/>
+                            <constraint firstItem="mce-rD-unJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="180" id="a22-uR-hz0">
+                                <variation key="heightClass=compact" constant="0.0"/>
+                            </constraint>
+                            <constraint firstItem="mce-rD-unJ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="e1e-EF-ReV"/>
+                            <constraint firstItem="KXc-cX-gpj" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="e6W-zH-MGg"/>
+                            <constraint firstItem="KXc-cX-gpj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="u4w-Tc-zpX"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="P6T-Y3-fIQ"/>
+                                <exclude reference="Qqo-gw-U2M"/>
+                                <exclude reference="u4w-Tc-zpX"/>
+                                <exclude reference="A3q-Zp-kxA"/>
+                                <exclude reference="a22-uR-hz0"/>
+                                <exclude reference="e1e-EF-ReV"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="O7t-CF-bey"/>
+                                <include reference="P6T-Y3-fIQ"/>
+                                <include reference="Qqo-gw-U2M"/>
+                                <exclude reference="RNE-cj-GAg"/>
+                                <exclude reference="e6W-zH-MGg"/>
+                                <include reference="u4w-Tc-zpX"/>
+                                <exclude reference="2se-9m-eNp"/>
+                                <include reference="A3q-Zp-kxA"/>
+                                <exclude reference="GGH-y1-lbd"/>
+                                <include reference="a22-uR-hz0"/>
+                                <exclude reference="e1e-EF-ReV"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="cloud" width="300" height="197"/>
+    </resources>
 </document>
